--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -28,17 +28,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Core, Version=1.0.2197.256, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Core, Version=1.0.2479.34350, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\..\..\Dev\Own\mediaportal\xbmc\bin\Release\Core.dll</HintPath>
+      <HintPath>..\..\mediaportal\xbmc\bin\Debug\Core.dll</HintPath>
     </Reference>
-    <Reference Include="Databases, Version=1.0.2197.256, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Databases, Version=1.0.2479.34351, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\..\..\Dev\Own\mediaportal\xbmc\bin\Release\Databases.dll</HintPath>
+      <HintPath>..\..\mediaportal\xbmc\bin\Debug\Databases.dll</HintPath>
     </Reference>
     <Reference Include="Dialogs, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\..\..\Dev\Own\mediaportal\xbmc\bin\Release\plugins\windows\Dialogs.dll</HintPath>
+      <HintPath>..\..\mediaportal\xbmc\bin\Debug\plugins\windows\Dialogs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
