--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -69,6 +69,8 @@
     <Compile Include="DB Classes\DBSeries.cs" />
     <Compile Include="Local Parsing Classes\Filelister.cs" />
     <Compile Include="Local Parsing Classes\ParserFilename.cs" />
+    <Compile Include="Online Parsing Classes\GetSeries.cs" />
+    <Compile Include="Online Parsing Classes\OnlineParse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -76,6 +78,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="DB Classes\ZsoriParser.cs" />
+    <Compile Include="Online Parsing Classes\SelectSeries.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Online Parsing Classes\SelectSeries.Designer.cs">
+      <DependentUpon>SelectSeries.cs</DependentUpon>
+    </Compile>
     <Compile Include="TVSeriesPlugin.cs" />
     <Compile Include="VideoHandler.cs" />
   </ItemGroup>
@@ -88,6 +96,10 @@
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Online Parsing Classes\SelectSeries.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>SelectSeries.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
