Big update! - now retrieving up to date data for series & episodes. - updated the details tree view so that it shows all available fields - changed the retrieval logic to not always ask for all the episodes of a season (in order to not bring the server down for nothing)
Things are looking good! Not far from being usable!

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Online Parsing Classes\GetEpisodes.cs" />
     <Compile Include="Online Parsing Classes\GetSeries.cs" />
     <Compile Include="Online Parsing Classes\OnlineParse.cs" />
+    <Compile Include="Online Parsing Classes\UpdateEpisodes.cs" />
+    <Compile Include="Online Parsing Classes\UpdateSeries.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
