pffffiiooooo finally, this one got me - added more skin files (bluetwo & BlueTwo wide) - *completely* reworked the parsing - it wasn't running in its own thread in the first place (stupid me) - now that the parsing works in its own thread, I added the "in player" automatic parsing. Works fine too.
Time to release!

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DB Classes\DBReplacements.cs" />
     <Compile Include="GUIConfiguration.cs">
       <SubType>Form</SubType>
     </Compile>
