- deep change on how the data is structured; I'm now using the online series ID as the main link between all objects. Purpose: to be able to merge different local series name into one general node. For that matter, all previous data is erased and a full scan is necessary again. - fixed text fields not showing in MP (MP's fault as I supposed)

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Online Parsing Classes\SelectSeries.Designer.cs">
       <DependentUpon>SelectSeries.cs</DependentUpon>
     </Compile>
+    <Compile Include="Subtitle Retrievers Classes\Forom.cs" />
     <Compile Include="TVSeriesPlugin.cs" />
     <Compile Include="VideoHandler.cs" />
   </ItemGroup>
