--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -18,6 +18,7 @@
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -26,25 +27,25 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Core, Version=1.0.2479.34350, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Core, Version=1.0.2607.22240, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\mediaportal\xbmc\bin\Debug\Core.dll</HintPath>
+      <HintPath>..\..\..\MP2\xbmc\bin\Release\Core.dll</HintPath>
     </Reference>
-    <Reference Include="Databases, Version=1.0.2479.34351, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Databases, Version=1.0.2607.22244, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\mediaportal\xbmc\bin\Debug\Databases.dll</HintPath>
+      <HintPath>..\..\..\MP2\xbmc\bin\Release\Databases.dll</HintPath>
     </Reference>
-    <Reference Include="Dialogs, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Dialogs, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\mediaportal\xbmc\bin\Debug\plugins\windows\Dialogs.dll</HintPath>
+      <HintPath>..\..\..\MP2\xbmc\bin\Release\plugins\windows\Dialogs.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.84.0.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\MediaPortal 0.2.1.0\ICSharpCode.SharpZipLib.dll</HintPath>
+      <HintPath>.\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.DirectX.AudioVideoPlayback, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -62,6 +63,13 @@
       <DependentUpon>GUIConfiguration.cs</DependentUpon>
     </Compile>
     <Compile Include="Local Parsing Classes\LocalParse.cs" />
+    <Compile Include="localLogos.cs" />
+    <Compile Include="logoConfigurator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="logoConfigurator.designer.cs">
+      <DependentUpon>logoConfigurator.cs</DependentUpon>
+    </Compile>
     <Compile Include="LogWriter.cs" />
     <Compile Include="DB Classes\DBBase.cs" />
     <Compile Include="DB Classes\DBEpisode.cs" />
@@ -77,6 +85,7 @@
     <Compile Include="DB Classes\DBSeries.cs" />
     <Compile Include="Local Parsing Classes\Filelister.cs" />
     <Compile Include="Local Parsing Classes\ParserFilename.cs" />
+    <Compile Include="MediaInfoDLL.cs" />
     <Compile Include="Online Parsing Classes\GetBanner.cs" />
     <Compile Include="Online Parsing Classes\GetEpisodes.cs" />
     <Compile Include="Online Parsing Classes\GetSeries.cs" />
@@ -99,12 +108,18 @@
       <DependentUpon>ChooseFromSelection.cs</DependentUpon>
     </Compile>
     <Compile Include="Torrent\Torrent.cs" />
+    <Compile Include="Translation.cs" />
     <Compile Include="TVSeriesPlugin.cs" />
     <Compile Include="VideoHandler.cs" />
+    <Compile Include="view.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GUIConfiguration.resx">
       <DependentUpon>GUIConfiguration.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="logoConfigurator.resx">
+      <DependentUpon>logoConfigurator.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -134,6 +149,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>xcopy $(TargetPath) "D:\Dev\Own\MediaPortal SVN\xbmc\bin\Debug\plugins\windows" /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetPath)" "H:\MP2\xbmc\bin\Release\plugins\windows\" /Y</PostBuildEvent>
   </PropertyGroup>
 </Project>
