--- a/trunk/Test-MP-TVSeries/app.config
+++ b/trunk/Test-MP-TVSeries/app.config
@@ -1,5 +1,13 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
     </configSections>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="ICSharpCode.SharpZipLib" publicKeyToken="1B03E6ACF1164F73" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-0.85.1.271" newVersion="0.85.1.271"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
