Alright, I'm back in business ! What's in this commit: - new contextual menu, with submenus - more organized, easier to expand - fixes here and there - newzbin / newsleecher integration for episode downloads - location of the DB can be set (I don't recommend putting in on a shared drive though - it has a tendency to get corrupted somehow) - some expressions changed (prevent matches of episode with "sample" in it - localization work in more places
I believe that's it.

--- a/Test-MP-TVSeries/Test-MP-TVSeries.csproj
+++ b/Test-MP-TVSeries/Test-MP-TVSeries.csproj
@@ -31,11 +31,11 @@
   <ItemGroup>
     <Reference Include="Core, Version=1.0.2476.19636, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\mediaportal\xbmc\bin\Debug\Core.dll</HintPath>
+      <HintPath>..\..\..\Mediaportal SVN\xbmc\bin\Debug\Core.dll</HintPath>
     </Reference>
     <Reference Include="Databases, Version=1.0.2308.21888, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\mediaportal\xbmc\bin\Debug\Databases.dll</HintPath>
+      <HintPath>..\..\..\Mediaportal SVN\xbmc\bin\Debug\Databases.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
