--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -31,17 +31,17 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Core, Version=1.0.2607.22240, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="Core, Version=0.2.2.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\MP2\xbmc\bin\Release\Core.dll</HintPath>
+      <HintPath>..\..\..\Mediaportal SVN\xbmc\bin\Debug\Core.dll</HintPath>
     </Reference>
-    <Reference Include="Databases, Version=1.0.2607.22244, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="Databases, Version=0.2.2.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\MP2\xbmc\bin\Release\Databases.dll</HintPath>
+      <HintPath>..\..\..\Mediaportal SVN\xbmc\bin\Debug\Databases.dll</HintPath>
     </Reference>
     <Reference Include="Dialogs, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\MP2\xbmc\bin\Release\plugins\windows\Dialogs.dll</HintPath>
+      <HintPath>..\..\..\Mediaportal SVN\xbmc\bin\Debug\plugins\windows\Dialogs.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.84.0.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
       <SpecificVersion>False</SpecificVersion>
@@ -54,12 +54,16 @@
     <Reference Include="System.Xml" />
     <Reference Include="Utils, Version=2.1.2.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\MP2\xbmc\bin\Release\Utils.dll</HintPath>
+      <HintPath>..\..\..\Mediaportal SVN\xbmc\bin\Debug\Utils.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DB Classes\DBNewzbin.cs" />
     <Compile Include="DB Classes\DBReplacements.cs" />
     <Compile Include="DB Classes\DBTorrent.cs" />
+    <Compile Include="Downloaders\DownloadMonitor.cs" />
+    <Compile Include="Downloaders\IDownloaders.cs" />
+    <Compile Include="Downloaders\newzbin.cs" />
     <Compile Include="feedback.cs" />
     <Compile Include="GUIConfiguration.cs">
       <SubType>Form</SubType>
@@ -122,7 +126,7 @@
     <Compile Include="ChooseFromSelection.Designer.cs">
       <DependentUpon>ChooseFromSelection.cs</DependentUpon>
     </Compile>
-    <Compile Include="Torrent\Torrent.cs" />
+    <Compile Include="Downloaders\Torrent.cs" />
     <Compile Include="Translation.cs" />
     <Compile Include="TVSeriesPlugin.cs" />
     <Compile Include="VideoHandler.cs" />
@@ -157,6 +161,13 @@
     <None Include="img\arrow_down.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Core.dll" />
+    <Content Include="Databases.dll" />
+    <Content Include="Dialogs.dll" />
+    <Content Include="ICSharpCode.SharpZipLib.dll" />
+    <Content Include="Utils.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
@@ -168,6 +179,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetPath)" "H:\MP2\xbmc\bin\Release\plugins\windows\" /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetPath)" "D:\Dev\Own\Mediaportal SVN\xbmc\bin\Debug\plugins\windows\" /Y</PostBuildEvent>
   </PropertyGroup>
 </Project>
