- Fixed: 'Delete Physical File(2) when deleting database entries' check box does not remember setting when dialog is closed
- Fixed: Views controls do not re-size accordingly when Log window is expanded, possible repaint issue.

- Added a little bit more space between the log window and the Import controls (start import button, progress bar and log drop down) when expanded

- Fixed: Controls in the Display control tab don't resize horizontally correctly

- Added '%' after the "An episode is watched after" textbox

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -221,6 +221,6 @@
   <Target Name="AfterBuild">
   </Target>-->
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetPath)" "h:\MP2\xbmc\bin\Release\\plugins\windows\" /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetPath)" "C:\Program Files\Team MediaPortal\MediaPortal\plugins\windows\" /Y</PostBuildEvent>
   </PropertyGroup>
 </Project>
